# tsdisagg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Examples.ipynb  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml  run_tests.yml
conda_envs/: tsdisagg_test.yml
tests/: test_computations.py  test_covariance.py  test_disaggregation.py  test_frequency_conversion.py  test_time_conversion.py
tests/data/: AL_A_to_Q_expected.csv  AL_Annual_Data_Shorter.csv  AL_Monthly_Data_Modified_Shorter.csv  AL_Quarterly_Data_Modified.csv  Annual-To-Quarter-Results.csv  R_Output_chow-lin_QtoM.csv  R_Output_chow-lin_QtoM_2.csv  R_output_chow_lin.csv  R_output_chow_lin_two_indicator.csv  R_output_denton.csv  R_output_denton_cholette.csv  R_output_denton_cholette_w_indicator.csv  R_output_litterman_A_to_M.csv  exports_m.csv  exports_q.csv  imports_q.csv  sales_a.csv  sales_q.csv
ts_disagg/: __init__.py  ts_disagg.py
tsdisagg/: __init__.py  _version.py  time_conversion.py  ts_disagg.py
