[project]
name = "tsdisagg"
dynamic = ['version']
description = "Statistical tools for converting low frequency time series data to higher frequencies"
readme = 'README.md'
license = { file = 'LICENSE'}
authors = [{name = "Jesse Grabowski", email="jessegrabowski@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics"
]

keywords = [
  "time series",
  "decomposition",
  "datetime",
  "econometrics"
]

dependencies = [
    "numpy",
    "pandas >= 2.2.0",
    "scipy"
]

[project.urls]
Repository = "https://github.com/jessegrabowski/tsdisagg.git"
Issues = "https://github.com/jessegrabowski/tsdisagg/issues"


[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "versioneer"
]


[build-system]
requires = [
    "numpy",
    "setuptools",
    "versioneer[toml]",
]
build-backend = "setuptools.build_meta"


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "tsdisagg/_version.py"
versionfile_build = "tsdisagg/_version.py"
tag_prefix = 'v'

[tool.setuptools]
py-modules = ['tsdisagg']

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = [
  "-v",
  "--doctest-modules",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tsdisagg/_version.py", "setup.py"]


[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W", "RUF"]
ignore = [
  "E501",   # Line length
  "E741",   # Ambiguous variable name
  "RUF001", # String contains ambiguous character (such as Greek letters)
  "RUF002", # Docstring contains ambiguous character (such as Greek letters)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D212",
  "D213",
  "D301",
  "D400",
  "D401",
  "D403",
  "D413",
  "D415",
  "D417",
]


[tool.ruff.lint.isort]
lines-between-types = 1
