[metadata]
name = tsdisagg
version = 1.0.0
description= Statistical tools for converting low frequency time series data to higher frequencies
long_description = file: README.md
long_description_content_type = text/markdown
author=Jesse Grabowski
author_email=jessegrabowski@gmail.com
url=https://github.com/jessegrabowksi/tsdisagg

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas

[options.packages.find]
exclude = tests*
