[metadata]
name = tsdisagg
version = 1.0.1
description = Statistical tools for converting low frequency time series data to higher frequencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/tsdisagg
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    numpy
    pandas
    scipy

[options.packages.find]
exclude = tests*
